--- a/topic-1/1-1.md
+++ b/topic-1/1-1.md
@@ -8,3 +8,21 @@
 
 * 我们有我在宝洁公司 30 年的职业生涯中最强的创新项目，目前正投资该项目以推动业务的增长。--- **鲍勃·麦克唐纳（Bob McDonald）**，宝洁公司前董事会主席、总裁兼首席执行官
 * 我们相信会有所作为。维珍代表着物有所值、质量、创新、乐趣和竞争意识。我们通过授权给员工来提供优质服务，同时我们促进和监督顾客反馈，通过创新来持续提升顾客体验。--- **维珍**
+* 阿迪·达斯勒（Adi Dassler）对运动有明确的、简单的和坚定的激情，我们受益于这一精神 50 年来不断创新，我们一直站在技术前沿。--- **阿迪达斯关于它的未来**（www.adidas.com）
+* 创新是我们的命脉。--- **西门子关于创新的讨论**（www.siemens.com）
+* 我们正在审视通用电气的高层领导人是否有足够的想象力。富有想象力和创造力的领导是那些有勇气在新想法上投资、带领团队发现更好的想法并带领人们更谨慎、更理性地承担风险的人。--- **杰夫·伊梅尔特（J.Immelt）**，通用电气前主席、首席执行官
+* 创新将领导者和跟随者区分开米。--- **史蒂夫·乔布斯**，苹果公司联合创始人
+* 约翰迪尔确保企业增长的关键就是不断发明对客户有用的新产品的能力。--- **罗伯特·雷恩（RobertLane），约翰迪尔（JohnDeere）**前首席执行官
+
+创新与增长息息相关。新的创意能创造一个企业的竞争优势，并通过这一过程产生新的业务。尽管竞争优势还来源于诸如企业规模和企业资产等方面，但在今天的竞争模式中，那些能够利用其知识以及技术技能和经验开发出新产品、新服务和新工艺流程的企业更有优势。经济学家在数十年间关于这个趋势一直争论不休，但大部分人都认同创新对经济增长有举足轻重的影响。威廉·鲍莫尔（William Baumol）指出 “18世纪以来几乎所有的经济增长本质上都要归因于创新”。研究机记1.1给出了一些关于创新在经济中的重要性的例子。
+
+## 研究礼记1.1
+
+**为什么创新对经济如此重要**
+* 经济合作与发展组织（OECD）的成员每年在研发上投入1.5万亿美元。
+* 目前在美国有超过16000家公司有自已的工业研究实验室，至少有20家公司的年度研发预算超过10亿美元。
+* 中国力图在2020年将研发预算从占GDP的2%提升到2.5%
+* 韩国取代以色列成为世界上研发最密集的国家，在研发上的投入占到GDP的4.36%。在这方面同样优秀的亚洲国家有日本（3.35%）。
+* 2008年，德国所有公司营业额的16.8%来自新推出的产品，而在研究密集型部门，这个数字是38%。同年，德国通过流程创新使每件产品平均节省3.9%的成本
+* 2015年欧盟的公司创新调查（CIS）显示，53%的企业被评估为 “有创新能力的”，2013年这个数字是45%。其中，61%的大型企业（员工超过250人）和53%的中小型企业（员工10～250人）是有创新能力的。
+* 在英国，28%的创新者从事出口贸易（非创新者为10%）；据统计，这些创新者座用了更高素质的员工，尤其是有科学与工程学位的员工（占12%），而非创新者只有4%。25%的企业对产品或流程进行了技术革新，42%的企业在非技术领域（组织或市场方面）创新，27%的企业表示参与了 “新的商业实践”。
