--- a/topic-1/1-3.md
+++ b/topic-1/1-3.md
@@ -1,2 +1,45 @@
 # 1.3 创新不仅仅是产品
 
+006
+创新管理（第6版）
+1.3
+创新不仅仅是产品
+当然，创新不局限于生产制造过程，越来越多的创新案例出现在服务业。-1]
+（实际上，世界上第一台商用电脑用于支持英国餐饮服务公司J.LyonsandCo的面包
+店规划和物流。）在银行业，英国FirstDirect银行通过运用技术创新成为最具竞争力
+的银行。这家银行在高精尖信息技术的支持下为客户提供电话银行服务，每个月能够
+吸引1万名新客户——这种服务模式最终成为行业标准。DirectLine保险公司采用了
+类似的技术创新方式，从根本上改变了市场的竞争基础，也使得这个行业中所有的竞
+争者都争相模仿。5.19在互联网零售领域，亚马逊改变了图书、音乐和旅游等多种产
+品的销售方式，而eBay之类的公司将拍卖业务渗透到客户的起居室之中。
+研究礼记1.3讨论了一些领域中创新有时被“隐藏”的例子。
+研究机记1.3
+隐藏的创新
+英国的一家创新基金会NESTA在2006年发布了一份关于英国“创新的差距”的
+报告，特别强调了“隐藏的创新”，即没有反映在研发投资额或授予专利数等传统指
+标中的创新活动。一项研究指出了六个并不被认为是创新的领域，认为这种创新越来
+越重要，特别是在服务方面。随后的一项研究进一步详细研究了六个隐藏的创新领
+域：石油生产、小额银行、建筑、法律援助服务、教育和罪犯改造。该研究指出了四
+种隐藏的创新：
+类型一：与通过传统指标可以衡量的活动相同或相似，但因为领域不同而被排除
+的创新。例如，石油勘探新技术的发展。
+类型二：不含先进科学技术基础的创新，比如组织形式或商业模式上的创新。例
+如，供应商与客户之间在重大建设项目上的合同关系的新形式
+类型三：创新源于现有技术和流程的新组合。例如，银行通过整合各种后台IT
+系统来提供创新的客户服务方式，如网上银行。
+类型四：本地开发的、低调发生的小规模创新，这些不仅被传统指标忽视，即使
+身处其中的许多组织和从业人员都不清楚。例如，每天在教室中或多学科建设团队中
+提出的各种创意。
+资料来源：NationalEndowmentforScience，TechnologyandtheArts（NESTA），2006，“Theinnovation
+gap，”and2007，“Hidden innovation，”https://www.nesta.org.uk/.
+创新正在成为国家经济政策的中心点。例如，英国政府的科学创新办公室（UK
+OfficeofScienceandInnovation）认为创新是“现代经济的发动机，它把创意和知识
+转化为产品和服务”。7一个澳大利亚政府网站同样认为创新十分重要：“公司若不投
+资于创新，就等于将自己的未来置于危险之中。如果不寻求创新方案来解决正在出现
+的问题，它们的生意就很难成功，它们也将无力参与竞争。”加拿大统计局（Statis
+ticsCanada）的一项数据表明，成功的中小企业具有以下特点：
+·创新是与成功相关联的最重要的因素。
+·创新型企业通常比不创新的企业拥有更强劲的增长力，或者说更成功。
+
+·创新型企业能赢得市场份额，其盈利能力持续增强。
+为此，越来越多的在区域和国家层面上鼓励和培育创新的政策措施相继出台。
