--- a/topic-1/1-4.md
+++ b/topic-1/1-4.md
@@ -14,16 +14,11 @@
 
 &#x20;**表 1-2 创业精神和创新**&#x20;
 
-|   |   |   |   |   |   |
-| - | - | - | - | - | - |
-|   |   |   |   |   |   |
-|   |   |   |   |   |   |
-|   |   |   |   |   |   |
-|   |   |   |   |   |   |
-|   |   |   |   |   |   |
+| 在组织生命周期中所处阶段 |  新兴 | 成长  | 维持/形成规模  | 再创新  |
+| - | - | - | - | - |
+| 创造商业价值  | 个体企业家开发新技术或市场机会  | 通过增加新产品/服务或进入新市场来发展业务  | 建立一个渐进性和突破性创新的投资组合，以维持业务和扩展新市场  |  回到打破框架的突破性创新，这种创新开创了业务，并以新的方式发展业务 |
+|  创造社会价值 | 社会企业家热心于改善或改变他们所处的环境  | 发展创意，并推动大家参与变革的社会网络——在某个地区或围绕某个关键问题  | 广泛传播创意，扩散到其他社会企业家群体中：与社会主流如公共部门机构等建立联系  | 改变这个体系，然后作为下一波变革的推动者  |
 
-
-
-在组织生命周期中 新兴 成长 维持/形成规模 所处阶段 再创新 建立一个渐进性和 个体企业家开发 通过增加新产品/服 回到打破框架的突破性 突破性创新的投资 创造商业价值 新技术或市场 务或进入新市场来 创新，这种创新开创了 组合，以维持业务 机会 发展业务 业务，并以新的方式发 和扩展新市场 展业务 发展创意，并推动 广泛传播创意，扩 社会企业家热心 大家参与变革的社 散到其他社会企业 创造社会价值 于改善或改变他 会网络——在某个 家群体中：与社会 改变这个体系，然后作 地区或围绕某个关 为下一波变革的推动者 们所处的环境 主流如公共部门机 键问题 构等建立联系 研究礼记1.4讨论了创新研究的“教父”约瑟夫·熊彼特的思想。 研究礼记1.4 约瑟夫·熊彼特——创新研究之“教父” 约瑟夫·熊彼特（JosephSchumpeter），经济理论领域中最著名的学者之一，就 创新这一主题撰写了著作。他作为经济学家有着辉煌的学术生涯，也曾担任奥地利财 政部长。他的观点很明了：创业者会致力于使用技术创新—新产品、新服务或者新 流程，来获取战略优势。在一段时间内，创新企业可能是唯一的，因此创业者有望大
+研究礼记1.4讨论了创新研究的“教父”约瑟夫·熊彼特的思想。 研究礼记1.4 约瑟夫·熊彼特——创新研究之“教父” 约瑟夫·熊彼特（JosephSchumpeter），经济理论领域中最著名的学者之一，就 创新这一主题撰写了著作。他作为经济学家有着辉煌的学术生涯，也曾担任奥地利财 政部长。他的观点很明了：创业者会致力于使用技术创新—新产品、新服务或者新 流程，来获取战略优势。在一段时间内，创新企业可能是唯一的，因此创业者有望大
 
 赚一笔——熊被特称之为“基断利润”。当然，其他创业者也会看到这一点并试图模 仿，这就导致其他创新的出现。涌现出的新创意会不断削减基断利润直至达到一个平 衡。至此，这个循环开始不断自我重复——原先的创业者或者其他人会去寻找下一个 能够重写规则的创新，由此展开下一轮循环。熊彼特谈到了“创造性毁灭”的过程， 即在不断追寻以创造新事物的同时会毁坏一些旧规则并建立新规则，而这一切都是由 对新的利润源的追寻所驱使。在他看来，“（真正重要的）是来自新商品、新技术、 新供货源、新组织类型的竞争，这样的竞争冲击的不是边际利润和现有公司的产出， 而是这些企业生存的根本”
