--- a/topic-1/1-5.md
+++ b/topic-1/1-5.md
@@ -1,2 +1,275 @@
 # 1.5 创新带来的战略优势
 
+创新对企业竞争优势的贡献体现在几个方面。例如，有研究表明，新产品和市场
+绩效之间存在强相关性。一方面，新产品能够帮助企业占领与保持市场份额，提高企
+业在市场上的盈利能力。另一方面，成熟产品单纯依靠价格优势无法在竞争市场中实
+现销售额增长，很多非价格因素在这个过程中起到非常重要的作用，如设计、产品定
+制以及质量等。另外，现有产品的生命周期日益缩短，例如，一种特定款式的电视机
+或者电脑的生命周期不过几个月，像汽车这种复杂产品的生命周期也不超过两三年，
+因此对企业来说，经常用更好的版本替代原有产品的能力变得越来越重要。所谓的
+“时间竞争”表明，企业不仅面对推出新产品的压力，而且要比竞争对手更快地推出
+新产品o；波士顿咨询公司在2015年的调查中发现，提高创新速度是最重要的驱动
+因素。5]
+同时，市场环境的不断变化使新产品开发成为至关重要的一种能力。社会经济领
+域的新变化（例如，人们的信仰、期望、所欲和所得的变化）会为企业带来新的机会
+和新的挑战。新的法规开辟了创业的新途径，也关闭了旧有经营方式的大门——例
+如，要求生产环保型产品的法规日益增多。竞争者推出的新产品可能会对企业既有市
+场地位构成重大威胁。总之，企业只有具备产品创新能力，才能在各种变化中迅速作
+出反应。
+虽然企业通常将新产品开发视为拓展市场的有力手段，但实际上流程创新也在这
+个过程中起着重要的战略性作用。制造或提供独一无二的产品或服务，或者以比其
+他企业更经济有效的方式制造产品或提供服务，都可以形成企业的竞争优势。例
+如，20世纪末，日本在汽车、摩托车、船舶和家用电器制造领域的成功很大程度上
+应归因于其出众的制造能力——这种制造能力源于连续不断的工艺流程创新。本
+田、丰田和日产公司在生产系统方面都具有强大的优势，它们的质量和生产率指标比
+日本汽车生产商的平均水平高出1~2倍。2而像牛津仪器公司（OxfordInstruments）
+和英国Incat公司这类规模相对较小的企业，能够在竞争激烈的全球市场中生存下来
+的一个主要原因就是，它们制造的产品极为复杂，产业中的新进入者很难学会和掌握
+它们的技术。
+与之类似，服务业中竞争优势的来源是提供比其他竞争者更好的服务：快速、
+廉价和高质量。花旗银行（Citibank）在技术创新的支持下，成为第一家为顾客提
+第1章创新的定义及意义009
+供自助提款服务的银行，从而确立了其技术领先者的市场地位。贝纳通（Benetton）
+花10年时间开发出来的基于先进信息技术的生产网络，使其成为世界上最成功的
+零售商之一。同样的模式也被Zara有效运用。美国西南航空公司（SouthwestAir-
+lines）的规模远小于竞争对手，它却成为民航领域的疫校者，被誉为效率最高的航
+空公司。这家公司的成功主要应归功于流程创新，例如缩短飞机的留港时间等。这
+种模式后来成为新一代廉价航空公司的模板，在一度平静的航空旅游业披起了一般
+革命浪潮。
+重要的是我们必须记住，从这些创新中获得的优势会随着他人的竞相模仿而逐渐
+消失。除非公司能够再次创新，否则它将落后。因为其他公司都在主动改变产
+品/服务、业务流程或基础商业模式。例如，银行业的领先者已易主，如今的银行业
+成为那些较早地利用信息通信技术的公司的天下。很多盈利可观的金融服务行业，比
+如证券和股票交易等行业，已经被嘉信理财这样拥有突破性的新模式的公司主导。不
+过，它们也在面对点对点借贷和其他网络金融的重大挑战。
+研究礼记1.5论述了组织面临的创新之势，案例研究1.3详细闻述了音乐行业的
+一个例子。
+研究礼记1.5
+创新之势
+20世纪80年代中期，壳牌公司开展的一项调查表明，大型公司的平均生存时间
+仅为人类寿命的一半。从那时起，来自各方面剧增的压力导致企业生存时间进一步缩
+短。很多研究关注的是关键指标构成的变化，以及当年的主要公司和关键创新者覆灭
+的原因。例如，福斯特和卡普兰（FosterandKaplan）指出，1857年组成标准普尔
+500指数的500家企业中，只有74家企业在1997年仍留在名单中。22]1900年组成道
+琼斯指数的前12家公司如今只剩下通用电气一家。即使是目前实力雄厚的大企业
+（如IBM、通用汽车），也会表现出对企业消亡的担心，更不用说那些境遇更槽糕的小
+公司了—因为它们缺乏庞大的资源基础。
+一些企业为了持续经营，不得不做出巨大的改变。例如，一家创建于19世纪早
+期的公司，当时的产品包括惠灵顿长靴和卫生纸，现在则是世界上最成功、规模最大
+的电信企业之一。在芬兰，诺基亚最初是一家伐木公司，制造砍伐林木的各种工具，
+之后从事造纸业，并由此转向无纸化办公的IT世界，最后进入手机行业
+另一家手机制造商沃达丰空中通讯（VodafoneAirtouch）通过兼并一家名为“曼
+内斯曼”（Mannesman）的公司来扩大规模。沃达丰公司创建于19世纪70年代，当
+时主要从事钢管的生产和研发。在英国，旅游集团汤姆逊（Thomson）的所有者一
+TUI公司——是欧洲最大的旅行和旅游服务公司，它的前身却是普鲁士时期成立的国
+有公共采矿冶金公司1[23]
+案例研究1.3
+音乐行业的本质变化
+2006年4月1日，这一天不仅仅是人们互相恶作剧的传统节日，也是飞速变化的
+010创新管理（第6版）
+音乐世界树立里程碑的一天。GnarlsBarkley组合在英国发行的第一首单曲“Crazy
+凭借网上下载次数登上单曲排行榜榜首，象征着一场互联网音乐革命正式展开。虽然
+这首歌到4月3日才在商店中销售，但是此时网上的下载次数已经超过31万次。零售
+商HMV的发言人詹纳罗·卡斯塔尔多（GennaroCastaldo）说：“这不仅标志着排行
+榜编制方式有了重大转变，而且说明合法下载歌曲的时代即将来临......如果实体唱片
+也以同样的速度销售的话，恐怕已经造就本年度最大的销售商。
+互联网的一个不易觉察却又极富挑战性的方面在于，它对娱乐行业尤其是音乐行
+业已经产生影响。在一定层面上，它的影响可以被认为是提供网上零售这种全新的销
+售渠道—例如我们可以从亚马逊或者CD-Now及其他100多个网站获得自己喜欢的
+最新CD。这些创新增加了购买音乐的选择空间，促使“有钱人才能买得起”的局面在
+新的互联网游戏规则下发生改变
+但在本质上相同的交易行为背后，发生了一个更加根本性的转变——音乐的创作
+和传播方式以及整个音乐行业所基于的商业模式的转变。一般而言，旧的模式涉及一
+个复杂的网络，包括歌曲创作者、A&.R选曲人员、在录音室里工作的制作人员，以
+及其他监督唱片、磁带、CD生产的人员，还有确保产品在国际市场上热销的销售和
+策划人员
+一些关键的变化削弱了这种结构，并给这个行业带来了巨大的冲击。旧的能力也
+许不再需要，获得新能力必须提上日程。当新的进入者充分利用互联网发展时，即使
+是像索尼这样的知名公司，也会发现很难保持市场领先地位。变化的核心是用数字格
+式创造、存储和传播音乐。很多研究人员对这一问题进行了研究。其中一个解决方案
+是由德国的弗朗霍夫研究所基于动态图像专家组（MPEG）3级协议开发的标准—
+MP3。MP3为文件传输过程中遇到的一个大难题提供了有效的解决方案，即文件压缩
+技术。正常的音频文件具有较宽的频率波段，因此文件很大，不适宜在网上快速传
+输，尤其是对使用调制解调器上网速度较慢的人群而言。MP3的有效压缩是通过去除
+人们听不到的信息细节实现的，使得文件变小，能够在互联网上更快地传播。
+MP3在互联网上快速传播，并得到充分共享。现在，许多软件都能够将一般音频
+格式的文件进行转换，例如将CD转换为MP3格式，还可以反向转换回去。
+这对音乐行业意味着什么？首先，有抱负的音乐人不再需要依靠来自大公司的
+A&R人员来挑选歌曲（这些大公司有能力承担录制和生产CD的巨大成本），可以使
+用家庭录音软件自己制作CD或者直接生成MP3文件，然后通过新闻组和聊天室等方
+式将作品向全球传播。在这个过程中，有效地形成了一种更为直接的音乐行业，使现
+有的唱片公司和艺术家成为劳观者。
+这样的转变不一定只具有威胁性。对许多人来说，较低的进入门槛增加了参与音
+乐行业的可能性。例如，制作和分享音乐不再复杂，不再需要与唱片公司签约，也不
+再依赖录制公司的资源。在外围也有创新的空间，例如在唱片发行领域，数字技术的
+应用降低了创作乐谱和歌词的门槛。新闻杂志及其相关领域也越来越开放。通过网上
+的专业人士和频道进行音乐评论及其他形式的评论成为可能，而且网上的评论通常早
+于报纸杂志。流行音乐排行榜及相关的广告也随着传播媒介的转变而开放——传播媒
+介从基于既有渠道传播和销售CD及磁带转变为通过互联网传播诸如MP3等音乐形式
+的新媒体。
+第1章创新的定义及意义011
+除了这些挑战外，音乐行业还面临另一种挑战——人们通过互联网进行音乐的共
+享。尽管技术上不合法，但是人们一直以来都乐于分享各自收集的音乐作品，只是没
+有达到互联网所能促成的这种具有成胁性的规模。很多唱片公司开始关注相关法律事
+宜——如何保护版权，如何确保以适当的比例给音乐制作人和分销人员支付版税。但
+当人们可以用MP3格式共享音乐并在全球范围传播时，对系统的监督和对版税的收
+取都变得极其困难。
+另一项技术——个人对个人（即P2P）网络的开发使得这一问题更加复杂。绅号
+为“Napster”的18岁学生施恩·范宁（SeanFanning），对于让他的朋友能够“看
+到”和共享自已计算机里的音乐收藏产生了兴趣。他认为，如果他们能以MP3格式
+拥有这些音乐，那么可以创建方便音乐共享的某种核心交换程序。
+结果产生了网站Napster.com，该网站提供P2P交换的高级软件。Napster服务
+器本身并不包含音乐文件，但每天都有数百万世界各地的人相互之间交换音乐。毫无
+疑问，由于不需要缴纳版税，这种方式对原有的唱片公司产生了极大的威胁，诉讼案
+接而至。这通制了Napster的活动，但是问题并没有得到解决。有许多网站模仿和
+扩展了Napster的做法，例如Gnutella，Kazaa和Limewire将P2P技术进一步发展，
+使人们可以交换不同格式的文件，如文本文件和视频文件等。Napster这个成功的网
+站已经和娱乐巨头贝塔斯曼（Bertelsman）成功签署了合作协议，为基于订阅的服务形
+式铺平了道路，以此来弥补版税方面的损失。
+美国上诉法院驳回了P2P技术侵犯版权的申诉。原本有人期望法律会限制这次革新
+的影响，结果被彻底泼了冷水。判决书上说：“历史已经证明时间和市场力量通常使利
+益分配达到均衡，不管新技术是钢琴、复印机、磁带录音机、录像机、个人电脑、卡
+拉OK机还是MP3播放器”（PersonalComputerWorld，November2004，p.32）。
+值得注意的是，把握住这件事带来的新机会的并不是唱片公司，而是电脑公司，
+特别是革果公司。在向市场成功投放iPod个人MP3播放器的同时，革果公司又创建
+了名为“iTunes”的网站，以每首单曲99美分的价格向用户提供成千上万首歌曲。
+网站经营的第一周就有100万次点击。2006年2月，第10亿首歌曲—“Speedof
+Sound”——酷玩乐队（Coldplay）专辑《X8.Y》中的曲子被来自密歇根州西布鲁姆
+菲尔德市的亚历克斯·奥斯特洛夫斯基（AlexOstrovsky）下载。“我希望今天，每一
+个客户、艺术家和唱片公司都花些时间回顾一下我们过去3年共同取得的成就。”幸
+果前首席执行官史蒂夫·乔布斯曾这样说道，“全球已经有超过10亿首歌曲被合法购
+买和下载，这代表了一股对抗盗版音乐的重要力量，也说明了唱片发行的未来必将从
+CD转移到互联网上。
+值得注意的转变发生在2005年，这一年单曲的下载数量首次超过了CD唱片的销
+售量。新的进入者（例如，乐购和微软）开始掌控这场游戏。而这一改变不会就此停
+止。2006年2月，“北极猴子”（ArcticMonkeys）乐队问鼎英国专辑榜单，并且获得
+了唱片行业中众多骄人的奖项—他们的起完全是通过互联网上的病毒式营销实现
+的，而不是凭借传统的广告和促销。在英格兰北部城市谢菲尔德举办演唱会时，乐队
+将录有他们早期歌曲的CD送给粉丝，粉丝们便开始在互联网上传播这些歌曲。詹纳
+罗·卡斯塔尔多（GennaroCastaldo）略显忧虑地说：“他们通过互联网获得了公众的
+关注，在网上的聊天室中，每个人都在谈论他们。”报道摇滚乐的记者戴维·辛克莱
+012创新管理（第6版）
+（DavidSinclair）建议：“这对于所有的唱片公司来说都是一个巨大的警示，它们中的
+很大一部分还在打睡呢......我们生活在一个完全不同的时代，一只“北极猴子，可
+以创造奇迹的时代。
+随后的发展表明，变革的步伐在加快，各种新的商业模式爆炸式增长，这些
+模式更适合在行业中创造和获取价值。例如，苹果和亚马逊主导了美国的音乐下
+载业务（分别占据70%和10%的市场份额）——这两家公司的根基截然不同
+尽管下载量大幅增加，但它们面对来自另一种商业模式的竞争：例如，Spotify等
+流媒体服务充许用户租用数以百方计的音乐和其他音频节目的使用权，而无须
+“拥有”其中任何一个。除了音乐行业，在电影和娱乐、电脑游戏等领域也在采
+用同样的模式。随着3D打印和低成本设计的出现，类似的模式也可以在有形产
+品领域中发挥作用。
+随着互联网日益普及，服务创新的范围有了更天的拓展。现在的服务能够同时摄
+供既有广度又有深度的服务——这就从根本上动摇了与信息相关的企业的原有市场，
+建立了一个全新的市场。21
+需要面对来自互联网的挑战的不仅仅是大银行和大型零售企业——尽管这些公司
+往往成为新闻的头版头条，也包括成千上万的小企业——很可能事关其生死存亡。想
+一想本地的旅行社，它们当初的运营方式多么简单啊！架子上摆满了华丽的宣传册供
+人们浏览，柜台旁边安排了很多销售代理，为顾客解决关于旅行团的选择和预订、购
+票和购买保险等一系列细节问题。再想一想，如果你坐在舒适的家中点击鼠标就能完
+成这些工作，它还能为你提供更多的选项，花更少的钱，你会怎么选择？所以在互联
+网创业浪潮中，旅游业成为最大的一个增长领域就不足为奇了。尽管许多企业在泡沫
+破灭时消失得无影无踪，还是会有像Lastminute.com和Expedia.com这样的网站在
+大浪淘沙之后存活下来，并发展成主流企业。
+重要的是，无论占主导地位的技术条件、社会条件和市场条件如何，要创造和维
+持竞争优势，关键在于组织的不断创新。
+表1-3列出了一些企业通过创新获得战略优势的途径。
+表1-3
+创新赢得战略优势
+战略优势
+机制
+案例
+产品或服务的
+推出随身听、移动电话、钢笔、照相机、洗碗机、
+提供独一无二的产品或服务
+新颖性
+电话银行、网络零售，等等
+以其他企业无法比拟的方式提供产品或
+工艺流程的新
+皮尔金顿公司的平板玻璃制造工艺、贝斯姆炼钢
+服务——更快捷、更低成本和更加定制
+颖性
+法、网上银行和在线售书，等等
+化，等等
+使用其他企业难以掌握的技术提供产品
+劳斯莱斯和飞机引擎——只有少数竞争者能够掌握
+复杂性
+或服务
+相关的复杂机械加工和冶金技术
+知识产权的法
+提供其他企业无法拥有的产品和服务，
+畅销药，例如善胃得、百忧解和伟哥等
+律保护
+除非它们支付许可费或其他费用
+第1章创新的定义及意义013
+续表
+机制
+战略优势
+案例
+日本的汽车制造商在每次推广新车型之际都会系统
+拓展竞争性因
+转移竞争基础，例如由产品价格转变为
+地将竞争重心从价格转移到质量，进而转移到灵活
+秦的范围
+价格加质量，或者价格、质量加选择性
+性和选择性，然后是更短的生产周期，而且每次都
+不是对这些因素折中取舍，而是加以综合
+亚马逊和谷歌——其他网站可以跟随，但优势一直
+掌握在先行者手中
+先行优势——在新产品领域成为先行者
+掌上电脑和其他个人数字助理产品（PDA）都获得
+能够占有极大的市场份额
+了不断增长的巨大的市场份额：实际上，多年前票
+快速跟进优势——有时作为先行者意味
+时机
+果公司就在其失败的Newton产品中详细地说明这
+着要面临很多预料不到的困难，此时，
+种理念和设计，但是由于软件方面的问题，无其是
+先观察其他企业在初期所犯的错误，然
+手写识别方面的问题使得这个产品以失败告终：同
+后迅速推出后续产品是更好的选择
+样，它的iPod并不是第一款MP3播放器，但它从导
+期产品失败中吸取教训，确保设计成功，并为
+iPhone搭建了平台
+随身听体系——由迷你唱片、CD、DVD发展为MP3
+稳健的平台
+生成一个支持不同版本和各代产品的平
+波音737已有50多年的历史，但是它的设计仍能够
+设计
+台性结构设计
+适应和满足不同用户的要求，是世界上销售最成功
+的飞机
+英特尔和AMD有各不相同的微处理器家族
+提供一种全新的产品或者工艺流程概念
+重写规则
+一种完全不同的做事方式，从而淘
+电脑文字处理系统淘汰了打字机，冰箱淘汰了冰，
+沐原来的产品
+电灯淘汰了煤气灯或油灯
+重新考虑系统各个部分联合工作的方式
+例如，Zara和贝纳通的服装销售、戴尔的电脑销
+流程各个部分
+一例如，更有效的网络的建立，虚拟
+的重构
+售、丰田的供应链管理、思科提供支撑网络的数字
+公司的外包和协调等
+基础设施
+跨应用情境的
+为不同市场重组既有要素
+用聚碳酸酯材料生产轮子，从滚动行李箱这样的应
+转移
+用市场，转向儿童玩具如轻巧的小型单脚滑行车
+Napster公司通过编写软件使音乐爱好者可以通过
+互联网交换自己喜欢的歌曲，Napster程序实际上
+是通过提供P2P网络来建立连接的。尽管Napste
+创新就是指找到新的做事方式和获得战
+诉讼缠身，但是它的追随者在下载和文件共享方
+其他
+略优势，所以总会有新的方式可用来获
+面开辟了广阔的领域。有相同经历的公司还有Ka
+得和保持竞争优势
+zaa，这家公司为成功的大容量网络电话提供平
+台，而拥有这些知识的公司Skype先是以26亿美
+元的价格卖给了eBay，最终以85亿美元的价格卖
+给了微软
