--- a/topic-1/1-7.md
+++ b/topic-1/1-7.md
@@ -1,2 +1,135 @@
-# 1.6 旧问题，新情境
+# 1.7 什么是创新
 
+美国最成功的发明家爱迪生一生拥有1000多项发明专利。他的团队发明的产品
+包括电灯、35毫来电影胶卷以及死刑电格等。爱迪生比多数人都更明白，创新最大的
+挑战不是发明——产生新的创意，而是如何让这些发明实现技术化和商业化。他在这
+方面的才能使他创立了一个商业帝国，截至1920年，公司的市值达到了216亿美元。
+他意识到技术推动（他系统化地建立了世界上第一个研发实验室）和需求拉动应该互
+动起来，并很好地把这种对创新的互动性本质的理解付诸实践。
+爱迪生在电力方面的努力就是一个很好的案例。爱迪生认识到，尽管电灯是很好
+的发明，但是在一个没有电力接入的世界中它并没有实用价值。因此，他的团队开始
+建立一整套发电设备和基础设施，包括照明台、开关和配线等。1882年，坐落在曼哈
+顿的史上第一个发电厂开始运行，并为该区域的800个灯泡供电。几年内，他在世界
+各地建造了300多个发电厂。30]
+正如爱迪生认识到的，创新比单纯地提出新创意要复杂得多：创新是将创意应用
+于实践的过程。对创新的定义的文字描述多种多样，但都强调需要开发和利用新知
+识，而不仅仅是发明。研究礼记1.6中给出了一些例子。
+在词典中，创新的定义是“改变”，它来自拉丁语“innovare”，意思是“创造新
+事物”。这个定义有点模糊，对我们来说，更有用的定义可能是“成功地利用新想
+法”。同样重要的是，要认识到，我们关心的不仅仅是创造商业价值，尽管商业是强
+大的驱动因素：创新也需要创造社会价值，例如助力教育、医疗保健、扶贫和人道援
+助。我们可以将定义扩展为“从想法中创造价值”。
+这些想法不一定是全新的或革新性的。正如一种定义表明的，“创新并不一定意
+味着技术水平的重大进步（突破性创新）的商业化，它还包括哪怕是小规模技术变革
+的利用（一种改进或渐进的创新）”。无论这一变化的性质如何，关键是如何实现。
+换句话说，如何管理创新
+对这一问题的回答来自长期存活下来的组织的经验。虽然大多数组织的寿命相对
+较短，但有些组织至少存活了一个世纪甚至多个世纪。看看“100俱乐部”的成
+
+员——如3M、康宁、宝洁、路透社、西门子、飞利浦和劳斯莱斯等公司，我们可以
+发现，它们的长寿很大程度上归功于持续创新的能力。它们在经历了限难之后学会了
+如何管理这个过程，更重要的是，如何重复这个过程。任何一个组织都会幸运一次，
+但能持续一个世纪或更长时间表明它不仅仅是靠运气。
+研究礼记1.6总结了创新的一些定义。
+研究礼记1.6
+什么是创新
+创新管理面临的一个问题是人们在理解这个术语时存在差异，经常把它与发明相
+混滑。这个词来源于拉丁语“innovare”，意思是“创造新的东西”。我们的观点与下
+面几位作者相同，即假设创新是把机会转变成新创意并广泛应用于实践的过程。
+创新是对新创意的成功开发。
+一英国贸易工业部（UKDepartmentofTradeandIndustry）创新协会（2004）
+产业创新包括在推广一种全新的（或改进的）产品或实现一个全新的（或改进
+的）工艺或设备的首次商业应用过程中所涉及的技术、设计、制造、管理和商业
+活动
+一克里斯·弗雷曼（ChrisFreeman，1982），《产业创新经济学》，
+第2版，Pinter出版社，伦敦
+0......创新不一定必须使技术发展水平的重大进展商业化（突破性创新），它也
+包括对技术知识的小规模改变（改进或渐进性创新）。
+一罗伊·罗思韦尔和保罗·加德纳（RoyRothwellandPaulGardiner，1985），
+《发明、创新、再创新和用户的角色》，Technouation，3，p.168
+·创新是创业者的特殊工具。通过创新，他们把变化作为发展不同业务和服务的
+机会。它可以作为一种学科，可以学习，也可以实践。
+一被得·德鲁克（1985），《创新与创业精神》，Harper&.Row出版社，纽约
+公司通过创新活动获得竞争优势。它们在最广泛的意义上从事创新，既包括新
+技术，也包括新的做事方式。
+迈克尔·波特（1990），《国家竞争优势》，Macmillan出版社，伦敦
+·创新的企业都在·条条框框之外，存在。它不仅有好的创意，而且将好的创
+意、有积极性的员工以及对顾客需求近乎本能的理解结合起来。
+理查德·布兰森（RichardBranson，1998），DTI创新演讲
+如果我们没有全面理解创新的过程，那么我们针对它采取的措施也就仅能发挥
+部分功效——纵然有良好的意图和执行。例如，创新经常跟发明相混滑——后者仅
+仅是将一个新创意加以推广和有效应用的万里长征的第一步。与爱默生的观点相
+反，成为一个好的发明家并不能保证商业上的成功。不管新捕鼠器的创意有多好，
+若不注意项目管理、市场开发、财务管理和组织行为等方面，你就不可能成功。案
+例研究1.5给出了几个例子，强调发明与创新之间的区别，以及完成整个创新过程
+绝非易事。
+
+案例研究1.5
+发明与创新
+19世纪最著名的发明都没有留下发明人的姓名。我们所知道的人名往往是那些把
+发明应用于商业的创业者。例如，真空吸尘器是由一个名为默里·斯彭格勒（J
+MurraySpengler）的人发明的，最初叫作“电吸尘器”。他找到本市的一个皮革制造
+商，这个商人虽然对真空吸尘器毫无了解，但是他想到一个推广和销售的好创意，于
+是造就了胡佛牌电动吸尘器。同样，在1846年一个名为伊莱亚斯·豪（EliasHowe）
+的波士顿人制造出了世界上第一台缝纫机。尽管他跑到英国努力推广，仍没有销售出
+自己的创意。当他回到美国时，发现一个名叫艾萨克·辛格（IsaacSinger）的人已经
+盗取了这一专利并且成功创建了企业。虽然辛格最终被迫向豪支付缝纫机的专利税，
+但是大多数人都会把“辛格”这一名字而不是“豪”与缝纫机联系起来。塞缓尔·摩
+尔斯（SamuelMorse）被认为是现代电报之父，事实上他只是发明了以他的名字命名
+的电码，其他发明来自别人。摩尔斯带来的是无穷的活力和实现目标的远见。为了实
+现目标，他综合利用了营销和政治技巧使开发工作获得了政府资助，并且传播了这样
+的观念—世上第一次能把处于美国不同地方的人联系起来。经过5年的发展，美国
+国内电报线已超过5000英里，摩尔斯被称为“那代人中最伟大的人”。[32]
+案例研究1.6提醒我们，将发明变为成功的创新并非易事。
+案例研究1.6
+创新并不容易
+尽管创新日益被视为保障竞争优势的有效措施和择卫战略地位的更加可靠的途
+径，但成功是无法保证的。在产品创新和流程创新的历史上，有许多明显很好的创意
+却最终失败，有些情况下还会产生惊人的后果。例如：
+01952年，福特公司的工程师研制出一款新车——E型车，用来与通用汽车和克
+莱斯勒生产的中型轿车相抗衡。在参考了2万条建议之后，最终以亨利·福特（Hen
+ryFord）唯一的儿子埃德塞尔·福特（EdselFord）的名字为这款车命名。但是公司
+并没有取得成功。当第一批Edsel轿车下线时，每辆车的成本达到约1万美元（是其
+他中型车的两倍）。按照宣传计划，公司当天要给当地的零售商配送75辆Edsel轿车
+实际上却只能提供68辆。同时，在另一个电视直播现场，这款车未能成功发动。这
+些都是小问题，到了1958年，考虑到消费者对这款车型的冷淡反应，为了维护公司
+的声誉，福特公司不得不放弃这一项目，为此总共付出了4.5亿美元和110847辆Ed-
+Sel轿车的代价。
+第二次世界大战后期，远距离航线将出现巨大市场的趋势越来越清晰，尤其是
+跨大西洋的航线。其中一个英国竞争者是BristolBrabazon客机，它是基于英国航空
+局1943年批准研发的巨型远程轰炸机设计的。新航线的主要用户BOAC在协商中关
+注的只是飞机的结构布局和装备，并没有对飞机的大小、最远行程及有效负载等提出
+要求。由于需要为这架巨型飞机提供新设备，预算很快上升，而且为了拓展跑道不得
+
+不将靠近波士顿的布里斯托市的一个小村庄整体搬迁。项目控制非常不力，许多不必
+要的东西被囊括进来，例如要有放置了镶边的梳妆镜供“最高贵女士”使用的化妆间，
+甚至将年轻女士的各种化妆用品也列入计划。飞机原型的建造花了6年半的时间，其间
+遇到了机翼和发动机设计方面的技术难题。尽管飞行测试很成功，但战后的飞机市场的
+特征与飞机设计工程师想象的完全不同。结果到了1952年，飞行航程尚未达到1000英
+里，这个项目不得不终止，给纳税人造成了巨额损失。10年后，同一家公司在同一个地
+点开发的类似的协和号飞机项目也难逃失败的下场。
+020世纪90年代末，在移动通信领域发生了一场革命性的变化，出现了许多成
+功的创新。但即使是经验丰富的企业也可能引火上身。摩托罗拉公司雄心勃勃地创办
+了一个风险企业，目标是为地球的每个角落提供移动通信服务，包括撒哈拉大沙漠的
+中心和珠穆朗玛峰的峰顶。完成这一目标需要投入70亿美元，发射88颗卫星。尽管
+成本巨大，“敏星计划”——这个众所周知的风险项目—还是得到了主要支持者的
+投资，并建立了网络。问题是，一旦项目的新奇性消失，人们便意识到他们并不需要
+在遥远的孤岛或者北极打电话，基于主要城市及人口密集区域的一般移动网络通信就
+可以满足自己的需求。更糟糕的是，“敏星计划”制造的手机体积大且笨重，因为要
+装下复杂的电子组件和无线电设备，这种高科技的手机成本十分惊人——3000美元！
+电话费同样很吊贵。虽然这代表着不可思议的技术成就，但这个系统从未正式启动。
+1999年，摩托罗拉公司依照《美国破产法》第11章申请破产保护。它的问题并没有结
+束，维持卫星在轨道上安全运行的成本为每月200万美元。不得不承担责任的摩托罗拉
+曾以为其他电信公司会愿意利用这些卫星，当发现没有人对此感兴趣时，它不得不额外
+拿出5000万美元来使卫星脱离轨道安全销毁。但这项使卫星脱离轨道并在大气层销毁
+的计划遗到了美国国家航空航天局（NASA）的批评。NASA认为这样做风险很大，甚
+至有可能引发一场核战争。因为任何落向地面的卫星碎片都可能触发俄罗斯的反导弹防
+御系统，该系统可能不会认为它们是卫星碎片，而将其误当作攻击莫斯科的导弹！
+在智能手机行业的加速竞争中，苹果和三星陷入了缩短产品生命周期和增加功能
+的旋涡，试图通过率先进入市场来平衡推出未经测试的技术的风险。随着2016年8月
+GalaxyNote7的推出，三星似乎找到了一个成功的途径，为用户提供进一步增强的功
+能，并且订单量超出了预期。但在发布数周后，有关设备着火的报告开始出现，这个危
+机不断发酵，导致许多航空公司拒载携带这类手机的乘客。尽管三星启动了大规模的产
+品召回（大约200万部）并试图解决这个问题，但危机持续，公司市值蒸发超过20亿美
+元，并触发了市场对整个品牌名誉受损的担忧。最终，该公司于10月11日宣布停止生
+产这款手机。TIME杂志称，这可能是历史上成本最高的产品故障之一
