--- a/topic-2/2-1.md
+++ b/topic-2/2-1.md
@@ -1,2 +1,29 @@
 # 2.1 不同的情境，相似的管理
 
+不同的环境会导致不同的解决方法。例如，大型科技公司（如制药公司）超向于
+通过正式的研发、专利搜寻等方法来解决问题：小型工程分包商则会重视快速实施的
+能力。零售商也许会承担相对小型的研发项目，但是它们会考察市场环境以便发现新
+的消费趋势，并且很可能将市场营销视为重中之重。
+消费品生产商可能更关心产品的快速开发和上市，一般会改变和重新定位基本的
+产品概念。重型工程公司（例如发电站）的产品可能会有非常严格的设计要求，并且
+相当依赖工程管理和实施阶段的系统整合。公共部门的组织结构必须适应各自的创新
+过程，以应对外部政策和监管的强大影响。
+尽管存在多种情形，创新各个阶段的基本模式仍保持不变。在本章，我们将更详
+细地探讨创新的本质过程，并且关注这一基本主题的多种变化。但是需要注意：对于
+成功的创新来说，被管理的对象与施加于它们的影响之间存在关联。这些“促成因
+素”代表了可以用于任何组织的创新管理的工具。再次强调，“促成因素”在每家公
+司里如何发挥作用可能各不相同，但它们代表了管理创新方面普遍问题的解决方法。
+本书接下来的章节将以更详细地探讨这些因素为基础而展开。
+创新管理是一种学习能力，这是我们的核心观点。虽然面对的是相同的问题，并
+且有一系列方法来处理这些问题，但是每个组织必须找到自己的解决方法，并在自己
+所处的环境中对此进行研究。简单地从别的地方复制思想是不够的，必须加以改造，
+形成适合于特殊环境的思想。
+创新在规模、性质、新颖度等方面有很大不同，创新型组织也是如此。抽象地
+看，每个案例中的基本程序都有可能是相同的。例如，开发一种新的消费品涉及识别
+出有关潜在需求和新技术可行性的信号，提出战略，作出选择并形成可以投入市场的
+新产品。
+同样，采用一套新的流程技术也需要遵循这一模式。首先，确定需求——这里是
+指内部需求（比如解决现有设备存在的问题），采纳新技术并提出一种战略构想。然
+后，需要确定当前的选择，或者创造一个新的选择，但新的选择将来必须能够得以开
+发，并且被企业的用户——有效的内部客户群运用，推向市场。了解用户的需求并为
+产品推向市场做好准备这一原则将有效地适用于产品创新的案例
