--- a/topic-2/2-3.md
+++ b/topic-2/2-3.md
@@ -1,2 +1,333 @@
 # 2.3 创新主题的变化
 
+在全球化和技术驱动下形成的一项重大创新就是关键业务流程的外包——包括
+IT、呼叫中心管理和人力资源管理等业务，尽管这预示着一种结构性变化，但其本质
+上仍是由创新驱动。此外，商业组织和非营利组织在创新方面的区别也许还不明朗
+私人企业可能通过提供新产品和新的分销方式进入市场并参与竞争。公共部门和非营
+利组织利用创新来帮助自己应对来自医疗、教育、法律和规定等方面的挑战。
+048创新管理（第6版）
+企业的延伸
+即使公司被“空洞化”，外包商和它的委托人所面临的挑战仍然是流程创新。外
+包的基本商业模式在于外包商比委托人更高效，从而创造业务的边际利润，达到这一
+点的关键在于调整的能力和核心商业过程的持续改善。随着时间的推移，一个外包商
+超越同行的优势会逐渐转移，从简单地更高效地执行外包标准操作到提供或与委托人
+合作开发新的产品和服务。像IBM这样的公司近年来一直试图构建“服务科学”这
+一基础学科。2
+在这种情形下，挑战在于外包机构的流程创新，即如何开发它们的能力使流程更
+有效（价格更便宜、速度更快、质量更高等），以及如何持续创新。
+非营利组织创新
+公共部门和非营利组织同样关注流程创新（挑战在于缺乏更有效的资源或更快、
+更灵活地应对不同的环境）和产品创新，综合利用新知识和已有知识来传递新的或改
+进的产品概念，例如分布式医疗、社区治安或小额银行贷款。案例研究2.2给出了
+公共部门创新的一些例子。
+案例研究2.2
+公共部门创新
+Mindlab是一个旨在促进丹麦公共部门创新的组织。它隶属于税务、就业和经济
+局，开创了一系列让公务员和公众参与各种社会创新的举措，提高了生产力和服务质
+量，同时削减了公共部门的成本。
+在英国，公共部门的创新举措带来了一些令人印象深刻的业绩提升。例如，在严
+重欺诈犯罪办公室（SeriousFraudOffice），一项创新计划使处理案件所需的时间减少
+了近50%，每个案例的处理成本直接节省了近2万英锈。在产品创新领域，一项名为
+DesignOutCrime的计划促成了两种原型啤酒杯的开发：采用新的高科技玻璃应用技
+术的啤酒杯和普通啤酒杯并无二致，但不会裂成碎片伤人
+公共部门创新的例子提醒我们，创新充满着机遇和挑战。3创新的基本模式是不
+同的1，公共部门的性质决定了创新会被不同利益相关者所“质疑”。5与许多私人
+企业的创新由竞争观念和集中决策所驱动不同，公共部门的创新经常会产生冲突，这
+是由于驱动力与奖励和激励措施缺乏。此外，公共部门的创新还存在中心/边缘关系
+问题，许多创新试验往往发生在接近提供服务的环节，但游戏规则是由中心制定的
+（财政大权通常被其控制）。在公共部门，创新的挑战主要是便成功经验广泛用于主流
+市场。1
+在人道主义创新领域中存在类似的挑战——世界各地要应对自然灾害和人为灾
+害。红十字会、救助儿童会和联合国各部门等机构也面临挑战，即如何在激发创新的
+同时确保提供急需的支持。7
+社会企业家
+社会企业家不满足于授人以鱼或是授人以渔。在彻底改变捕渔业之前，他们
+第2章作为核心商业过程的创新049
+不会停止脚步。
+一比尔·德雷顿，Ashoka首席执行官、董事长和创始人（Ashoka是一家
+致力于发展社会企业家职业的全球性非营利组织）
+并非所有创新都只关注盈利——有许多社会企业家的例子，其主要目的是创造某
+种形式的社会价值从而改变世界。比如诺贝尔奖得主穆军默德·无努斯，他在1976
+年创立格莱眠银行（又称孟加拉乡村银行），提供小额贷款帮助贫困人口通过个体经
+营的方式实现经济自给自足，这种模式已在全球58个国家得到推广。Aravind诊所的
+创始人旺卡塔斯瓦米（Venkataswamy）在其家乡泰米尔纳德邦致力于让白内障患者
+重见光明，最终推动了眼科护理系统的发展，造福成千上万人。8]
+研究礼记2.3中分析了几类社会企业家以及他们的动机
+研究礼记2.3
+不同类型的企业家
+在近期获奖的论文中，伊曼纽尔·福沙尔（EmmanuelleFauchart）和马克·格
+鲁伯（MarcGruber）研究了体育设备领城中创业者的动机和潜在的心理驱动因素
+他们使用社会认同理论来探索潜在的自我认知和愿望，并在样本中找到了三种不同的
+角色认同类型。达尔文主义者主要关心的是竞争和创造商业上的成功：社群主义者更
+关心社会身份，即在群体中的参与和贡献；“传教士”有强烈的内心愿景，渴望改变
+世界，他们的创业行动就是这种愿景的表现。10如表2-2所示，社会创业在管理方面
+面临更多的挑战。
+表2-2
+社会创业的挑战
+需要管理的方面
+社会创业的挑战
+许多潜在的社会创业者都有改变世界的激情，也有许多可以选择的目标，诸如消除贫困，解
+决教育资源、医疗保健等方面的问题。但仅有激情是不够的，他们还要有相应的创业技能来
+发现机会，找到开发的可能性。他们所要找的新想法应能为既有的问题提供不同的解决方案，
+寻找机会
+例如，以小额信贷替代传统银行服务或私人借贷
+正如我们在本书中了解的，这一技能未必强调发现——找到某种全新的东西，而是更多地强
+调连接——将看起来不相关的事物联系起来。在社会创业领域，这条鸿沟可能很大，例如
+与发现对新的期货交易软件的需要相比，要有更广阔的视野才能将农民和国际股票市场连接
+起来。因此，社会创业需要激情和视野，还要有一定的技能
+发现机会是一回事，让他人相信甚至支持它则是另一回事。无论是一个创新者面对风险投资
+家，还是大型组织中的一个内部团队向高层管理者做报告，成功的创业都需要说服他人。
+在社会创业中，还要考虑说服目标不明晰这个事实。即使你能够制定一份很好的商业计划
+考虑了所有可能的顾虑和问题，但是你要找谁以获取支持呢？尽管有一些基金和非营利组织
+会给予你支持，但在许多情况下，进行社会创业所需的重要技能之一就是社交能力，也就是
+顺藤摸瓜找到潜在资助者和支持者，并让他们参与项目的能力
+即使是在一个成熟组织的内部，仅有一种结构也是不够的。对于许多社会创业项目来说，排
+战略选择
+战在于它们将公司带往完全不同的方向，有一些甚至从根本上挑战公司的核心业务。例如
+一项提案提出要让发展中国家的药物便宜可得，这从社会创业的视角来看非常不错，但是这
+会给大型医药公司的结构和运营带来巨大的挑战，导致研发资金、分销等方面的经济问题变
+得更加复杂
+建立支持性联盟很重要——对于社会创新的支持保障往往比较分散——但权力和资源往往并
+不集中在某个决策者的手中。也未必会有董事会或风险投资家来听你的想法，因此需要蓄势
+待发
+提供实际的例子非常重要，不然这些想法会被认为是幻想。试点项目（如自由贸易模式或小
+额信贷）的作用很明显，可被采用并据此获得支持
+050创新管理（第6版）
+续表
+需要管理的方面
+社会创业的挑战
+社会创新要求广泛而丰富的创造力，整合多种多样的资源来进行改变
+特别是当资金很有
+限时。社交技能是关键—让不同角色参与进来，并拥有共同的愿景
+在许多社会创新中，至关重要的因素之一是扩大规模，将个人或当地的好创意加以实施和
+发展企业
+大，使之具有广泛的社会影响。例如，古普塔（AnshuGupta）最初的想法是回收垃圾堆里的
+旧衣服，将其处理后用来帮助当地社区的穷人。这一创意从67件衣服开始起步，规模逐渐扩
+大，每月在印度23个邦回收4万千克。这一原则也适用于其他材料，例如回收旧磁带制作垫
+子和软家具
+共同的愿景至关重要，可以促使人们为之投入激情，但社会创业者也会被指责太理想主义和
+创新战略
+不切实际。因此，需要有一个明确的计划将愿景一步步变成现实
+社会创新依赖于松散而有机的结构，而这种组织主要是通过共同目的连接起来的。与此同时，
+创新型组织/丰
+也需要一定的结构来确保有效实施
+富的联系网络
+许多成功的社会创新本质上都得益于建立社交网络、获得支持和通过网络获得多种资源。这
+些都表明社交能力十分重要
+资料来源：Bessant，J.andJ.Tidd，Innozationandentrepreneurship，2015.JohnWileyandSons，Chichester
+规模的重要性
+对创新管理方式产生重要影响的另一个因素是组织的规模。一般而言，小型组织拥
+有许多优势，例如灵活、快速决策，但是同样存在诸如资源约束等局限性。表2-3探究
+了这方面的一些推论。这意味着进行有效的创新管理将取决于创造性的结构和行为，例
+如通过非正式的方式共享观点和快速决策，通过建立网络连接来摆脱资源的约束。
+表2-3
+小企业创新的优势与劣势
+优势
+劣势
+快速作出决策
+缺乏正规系统的管理控制，如对项目的时间和成本缺乏管理
+具有非正式文化
+缺乏获得关键资源（尤其是金融方面）的渠道
+沟通质量高，大家都清楚下一步应该做什么
+缺乏关键的技能和经验
+有共享的明确的目标
+缺乏长远的战略和方向
+具有灵活性、敏捷性
+缺乏组织结构和接班人计划
+具有创业精神和冒险精神
+风险管理薄弱
+具有活力、热情，对创新充满激情
+缺乏细节应用，缺乏系统性
+拥有良好的内部和外部网络
+缺乏获取资源的渠道
+但是，我们亦需要认识到小型组织之间有很大的差异。在大多数经济体中，小型
+公司占据了整个商界的95%或者更天的比重，因而带来了巨大的多样性，涉及微型企
+业（如理发店和会计师事务所）乃至高新技术企业。不论是一家炸鱼和炸薯条的小
+店，还是一家需要数百方英锈风险投资的纳来科技公司，都需要面对创新的挑战，但
+是过程管理的方式可能会有很大差别。
+例如，在有关研发和其他创新活力指标的调查研究中，中小型企业往往表现得很
+差。然而，它们仍从事创新活动并开展研究，往往围绕流程改善或客户服务，借助的
+是只可意会的认识而不是正规的知识。大量的研究尝试将中小型企业按照创新者的
+特殊类型进行分类，并探讨形成这种特殊创新管理方式的可能性。例如，戴维·伯奇
+第2章作为核心商业过程的创新051
+（DavidBirch）的研究关注那些被称为“胶羚”的中小型企业，这些企业具有高成长
+性的潜力（年增长率高于20%），这在创造就业机会和促进整体经济发展方面的作用
+是显而易见的。2对中小型企业及其成长的研究表明，创新的情况非常复杂。
+特别是在快速增长行业中，高技术、年轻的研究密集型中小型企业与经济高增长
+似乎并不完全成正比。相反，“晓羚”企业很少涉及高科技，美国统计局的数据表明
+只有2%的高增长中小型企业是高科技企业，“膝羚”企业比一般小公司成立的时间更
+长，很少处于快速成长的行业中。只有5%的“爵羚”企业存在于美国三个增长最快
+的行业，增长最快的中小型企业却处于增长缓慢的行业，如化工、电气设备、塑料和
+纸制品等行业。
+戴维·伯奇在2004年评论道：“许多人认为公司就像一头牛，年轻的时候长得很
+快，之后就长得比较慢…....事实证明我们错了。公司不像牛，经常会“湿聚重
+生——它们采用新的管理方式、新的技术，在市场变革中获利，不管是什么原因，
+统计数据表明，越老的公司越可能快速增长，甚至超越最年轻的公司·."(21]
+这种观点被经济合作与发展组织的研究和长期由中小型企业引导发展的地区（如
+英国剑桥）的实践证明。关于中小型企业以及它们作为创新者和经济增长来源的作
+用，一种观点指出，高科技中小型企业很重要，同样重要的还有那些“隐藏”在更成
+熟行业中或者相对于产品创新更精于流程创新的创新者。
+基于项目的组织
+许多企业面临的挑战是转变成基于项目的组织，无论是完成某个特殊的项目（比如
+建设像机场和医院这样的主要设施），还是负责设计和构建复杂的产品系统（比如飞机
+引擎、飞行模拟器或通信网络）。这种基于项目的组织比较有代表性，会将许多不同元
+素整合为一个系统，通常涉及不同的公司，项目的工期较长，技术风险较大。2
+这种企业越来越多地考虑项目的组织和管理的创新，例如，在项目融资和风险分
+拍领域的创新。虽然这些项目可能会在核心创新流程方面表现得非常不同，例如为大
+众市场生产一种新的洗衣粉，基本的流程仍然是仔细了解用户需求并满足这些需求。开
+发过程中相关使用者的选择以及不同观点的整合是非常重要的，整体流程是相同的。
+平台创新
+人们越来越感兴趣的另一个领域是“平台创新”25.21，平台创新有多种形式。例
+如，英特尔几十年来致力于使其芯片位于计算机、智能手机和其他智能设备的核心，
+试图为其他参与者提供一个创新平台。苹果、三星和其他公司也在努力打造自己的设
+备平台，通过这些平台，各种应用程序的开发人员可以将产品提供给一个巨大的市
+场。乐高已经建立了一个强大的平台，不仅基于它的积木产品，还基于围绕产品构建
+的故事一—乐高电影的成功表明了这种模式的有效性。
+在每一种情况下，创新都需要以特定的方式去管理，寻找架构上的共同点，并与
+双边市场（例如，智能手机所面对的终端用户市场和应用程序供应商市场）合作。27
+网络和系统
+正如第1章所述，在21世纪创新的一个新特点是它很少是单一企业的活动。由
+052创新管理（第6版
+于多种原因，创新越来越超向于“多人游戏”，不同形式和规模的组织通过网络联系
+在一起。它们可能会形成地区集群、供应链、产品开发或者战略联盟，促使竞争者
+和客户因前沿新技术的应用而暂时合作。虽然这些网络的动态变化与单一组织的运
+营有着非常大的差异，难以控制和约束，但基本的创新流程方面的挑战是相同
+的——如何围绕触发理念形成共享的观点并付诸实践。在本书中，我们会关注超出
+组织范腾的创新管理方面的特殊问题，并在第7章专门研究通过创新网络加强管理
+的主题。
+这种多方位视角意味着必须转变我们从单一企业出发的思维方式，更多地从系统
+的角度来思考。创新不会出现在一个封闭的地方，想要有效地管理创新，我们必须提
+高系统地思考和操作的技能。这种系统的视角需要考虑多个角色——客户、供应商、
+竞争者、合作者，以及那些身处大环境之外却能对创新产生影响的人。2.2]
+国家、区域和地方层面上的创新
+对激发创新的大环境的思考，导致“创新系统”这一概念的产生。创新系统涉及
+政府、金融、教育、劳动力市场、科学和技术基础设施等要素，反映了组织实施创新
+流程所处的环境，以及各要素相互连接的方式。创新系统可以是地方性的、区域性
+的和国家范围的，发展和运作的方式有所不同。在一些案例中，要素之间会存在明
+确的协作，能够形成支持创新的条件，例如，区域创新导致德国巴登一符腾堡州、英
+国剑桥、美国硅谷和128公路以及新加坡形成产业集群。23.32.33]
+有效的创新管理越来越被视为一种挑战，这也暗示我们应如何组织和管理这一过
+程（详见案例研究2.3）。菲尔·库克（PhilCooke）指出，政策制定者对他提出的
+“构建优势”——这种构建结构下的群体能够在多大程度上被组织和管理——有越来
+越浓厚的兴趣。3（我们将在第4章更深入地探讨国家创新系统。）
+案例研究2.3
+区域创新系统的力量
+迈克尔·贝斯特（MichaelBest）认为，马萨诸塞州的经济能够多次振兴，得益
+于重视创新系统。33120世纪50年代，该州因为传统的纺织业和制鞋业而遭受巨大的
+损失，但是到80年代，“马萨诸寒州奇迹”引导了新兴高技术产业区的建设。这次复
+苏在很大程度上归功于一个支撑网络，该网络以专业技能、高技术研究和培训为核心
+（波士顿地区成为全球学院、大学、研究实验室和医院最密集的地区），并且迅速成立
+了企业，开发新兴的知识经济。但是这一奇迹在1986-1992年间逐渐消失，由于微
+型计算机和军事相关行业的崩溃，1/3的制造业工作机会项刻消失。尽管对未来的预
+测仍不乐观，但是该地区又一次围绕技能、技术资源和多样化供应基础构建起丰富的
+网络，在诸如特殊用途机械、光电子、医疗激光技术、数字印刷设备和生物技术等领
+域，新产品得以迅速开发。
+做得更好/做得不同
+除了所在行业外，公司的规模或更大的环境也影响着创新流程的操作方式。越来
+第2章作为核心商业过程的创新053
+越多的人开始关注创新的新颖度。-7从基础层面来看，组织的结构和行为需要逐步
+得到改善，并纳入组织的日常标准操作流程。更多的实质性项目需要组织投入更多的
+精力，例如，安排跨越职能界限的工作。进一步而言，当组织面对间断性情况，游戏
+规则发生改变时，可能有必要重新查看创新管理的整个路径。
+正如第1章所述，我们可以从两个互补的方面来思考创新问题。一个方面是“做
+得更好”——创新发生的稳定状态，在此情形下好的做法可以得到保持。与之相反的
+方面是“做得不同”，此时游戏规则已经改变（由于主要的技术、市场或政策的改
+变），在不确定性较高的情况下，创新管理更多的是一个探素和共同演化的过程。许
+多学者探讨了这一问题并且得出结论，即在动荡条件下公司必须发展这两方面创新管
+理的能力。38-40]
+但是，创新流程的一般模式仍然是相同的。在“做得不同”的情况下，组织仍然
+需要搜寻触发信号，不同的是它们需要探索不太熟悉的领域，并且运用周边视觉来找
+到弱信号，以便及早行动。它们仍然需要作出关于今后发展方向的战略选择，但是常
+常会面对不明确和不完整的信息，据此作出的决策存在很大的风险，因此应有承受失
+败以及快速学习的能力。实施决策时要针对项目有更大的灵活性，并且在监控和检测
+时可能需要采用比“做得更好”这一创新类型更灵活的标准。4]
+对于那些著名的企业来说，面对的挑战是需要提高管理两种创新方式的能力。很
+多时候，它们需要具备良好的系统以“做得更好”，但是有时会遇到来自那些更好地
+利用新环境的新进入者的挑战，除非它们可以发展“做得不同”的能力来和新进入者
+并驾齐驱。当市场上出现间断性变化时，顺势而为的新进入者不会存在这样的问题
+它们可以利用由全新技术所带来的机会。但是新进入者也会成为老企业，如果它们不
+能通过“做得更好”的创新流程来创建初始的优势，并且通过“做得不同”的能力来
+建立应对下一波变革潮流的能力，今后也将面对这些挑战。2]
+表2-4强调了这两种思考和行动方式之间的差异。
+表2-4
+不同创新管理的典型方式
+例子
+I型稳态创新型
+Ⅱ型一
+一非连续性创新型
+有一套既定的游戏规则，其他竞争对手也
+没有明确的游戏规则——这些规则随时间的推移
+解释模式一
+要遵循
+组织如何看待
+在搜索、选择环境和技术轨迹方面存在特
+而出现，但无法事先预测
+需要对模枝两可有高容忍度一—多个平行的可能
+和理解世界
+定的路径：它定义了游戏中所有玩家都可
+轨迹
+以使用的创新空间
+创新空间是由开放、模糊的选择环境定义的。探
+战略方向高度路径依赖
+索和学习关于构建新兴模式的信息和相关实验，
+利用决策过程，根据与游戏规则相关的风
+从而使主导设计浮现出来
+险管理来分配资源
+高度路径独立
+高风险，因为没有明确的轨迹——强调快速和
+战略决策制定
+（建议是否符合商业战略方向？它是否建
+立在现有能力的基础上？）在创新空间范
+轻量级的决策，而非在初始阶段做重量级的
+承诺
+南内可以冒可控风险
+多重并行押注，快速失败和学习成为主导主题。
+政治联盟是维持当前发展轨迹的重要因素
+对失败高度容忍，但风险由有限承诺管理。只有
+敢于“露头”的人才会收获成果——创业054创新管理（第6版）
+续表
+例子
+I型
+稳态创新型
+Ⅱ型非连续性创新型
+使用一组深入的流程和结构/过程进行操
+作，与风险规则相关一
+操作程序是开放的，基于对紧急情况的管理
+例如，项目管理
+的门径监控和审查
+项目实施基于“模糊前端”，较少涉及战略评估；
+搜索行为是沿着已定义的轨迹进行的，使用
+并且进行并行实验
+运营流程
+工具和技术进行研发、市场调研等，假定要
+探索和学习，快速失败和学习而不是管理风险
+探索的空间是已知的——
+搜索行为基于周边视野，通过微弱的信号获取新
+一搜索和选择环境
+为支持创新而建的网络—例如，用户参
+兴超势的早期预警
+与、供应商伙伴关系等一
+异质性的人际关系网，更强调弱联系而非已经建
+一建立在发展密
+切而牢固的联系的基础上
+立的关系
+因此，如图2-2所示，组织的挑战是能够在同一组织内发展两种创新方式。我
+们将在本书中多次提及这一主题，探讨超出稳定状态时创新管理面对的其他的或不同
+的挑战。
+我们是否有明确的创新战略
+我们是否有明确的创新战略
+搜寻
+如何找到
+的机会？
+搜寻我们
+选择我们要
+实施——如何
+如何找到创新
+获取我们
+做什么？为什么
+实现创新？
+的机会？
+如何获得利益
+我们是否有一个创新的组织
+图2-2
+对稳态创新和非连续性创新的管理
